feat: let staff inspect and audit activity data
Staff had no read path at all: reset and add wrote blind, so the only
tool for a report was the one that destroys the evidence. Adds a
read-only check, a reroll give-back for a burned misclick, and one
greppable audit line per mutating command.

check answers to a new activity.check node so helpers can diagnose
without being able to grant points; activity.admin implies it.